--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ itsdangerous==0.24
 Jinja2==2.10
 jsonschema==2.6.0
 MarkupSafe==1.0
+mysqlclient==1.3.12
 psycopg2==2.7.5
 pycparser==2.18
 PyJWT==1.4.2
