--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/lumen-framework": "5.6.*",
         "vlucas/phpdotenv": "~2.2",
         "firebase/php-jwt": "^5.0",
-        "darkaonline/swagger-lume": "5.6.*"
+        "darkaonline/swagger-lume": "5.6.*",
+        "barryvdh/laravel-cors": "^0.11.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
